--- a/app.css
+++ b/app.css
@@ -50,6 +50,16 @@ IS TRANSITIONING / BLUE PROGRESS CURSOR & POINTER EVENTS
 }
 /*
 ================================================================================
+LINK COLOR
+================================================================================
+*/
+
+a {
+	color: inherit;
+}
+
+/*
+================================================================================
 LOADER
 ================================================================================
 */
