--- a/app.css
+++ b/app.css
@@ -60,6 +60,19 @@ a {
 
 /*
 ================================================================================
+WIZARDRY -- MOŽDA NE!
+================================================================================
+*/
+@media only screen and (min-width: 1560px) {
+	body {font-size: 15.6px;}
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px)  {
+     p {font-size: 12.48px;}
+}
+
+/*
+================================================================================
 LOADER
 ================================================================================
 */
