--- a/app.css
+++ b/app.css
@@ -53,7 +53,7 @@ IS TRANSITIONING / BLUE PROGRESS CURSOR & POINTER EVENTS
 LINK COLOR
 ================================================================================
 */
-
+/*
 a {
 	color: inherit;
 }
