--- a/app.css
+++ b/app.css
@@ -267,17 +267,17 @@ html.has-scroll-smooth {
 ================================================================================
 GSAP PERFORMANCE FIX
 ================================================================================
+*/
 
- .clip {
+ .gsapfix {
   will-change: transform;
   backface-visibility: hidden;
-} 
-*/
+}    
 /*
 ================================================================================
 SHOW HIDE MENU
 ================================================================================
-
+/*
 #header {
    transform: translate3d(0,0,0);
    transition: transform .4s ease-in-out;
