--- a/app.css
+++ b/app.css
@@ -282,10 +282,8 @@ karta full format
 
 .mapboxgl-canvas {
   width:100%!important;
-  height: 100%!important;
-  position: absolute;
-  left: 0;
-  top: 0;
+  height: auto!important;
+
 }
 /*
 ================================================================================
