--- a/app.css
+++ b/app.css
@@ -279,7 +279,7 @@ GSAP PERFORMANCE FIX
 karta full format
 ================================================================================
 */
-
+/*
 .mapboxgl-canvas {
   width:100%!important;
   height: auto!important;
