--- a/app.css
+++ b/app.css
@@ -281,8 +281,8 @@ SWIPER ASPECT RATIO FIX
 ================================================================================
 */
 
-.swiper-container, .swiper-container-gal {
-  aspect-ratio: 16/9; 
+.swiper-container, {
+  aspect-ratio: 16/11; 
   width: 100%;
    height: 100%;
    overflow: hidden;
@@ -291,7 +291,7 @@ SWIPER ASPECT RATIO FIX
    .d-container {
      position: relative;
      width: 100%;
-     padding-top: 56.25%; /* 16:9 Aspect Ratio */
+     padding-top: 68.75%; /* 16:9 Aspect Ratio */
   }
   .d-inner {
      position:  absolute;
@@ -302,7 +302,7 @@ SWIPER ASPECT RATIO FIX
   }
 
   
-  
+
 /*
 ================================================================================
 karta full format
