--- a/app.css
+++ b/app.css
@@ -277,11 +277,11 @@ GSAP PERFORMANCE FIX
 
 /*
 ================================================================================
-SWIPER ASPECT RATIO FIX
+SWIPER STUFF
 ================================================================================
 */
 
-.swiper-container, {
+.swiper-container {
   aspect-ratio: 16/11; 
   width: 100%;
    height: 100%;
@@ -301,6 +301,54 @@ SWIPER ASPECT RATIO FIX
      right: 0;
   }
 
+  .swiper-pagination-bullet {
+    transform-origin: top left;
+       margin-right: 1.200em;
+        border-radius: 0 !important;
+        width:4em; 
+        height: 3px; 
+        opacity: 1;
+        margin-bottom: 0.5em;
+        background-color: #9b2557; 
+        outline: none !important;
+        box-shadow: none;
+        transform: scaleX(1);
+        transition: all 0.3s ease 0s;
+    }
+    
+    .swiper-pagination-bullet-active {
+      background-color: #9b2557 !important;
+        outline: none !important;
+        box-shadow: none;
+         transform: scaleX(0.5);
+        transition: all 0.3s ease 0s;
+       }
+    
+    .swiper-container .swiper-wrapper .swiper-slide-active .up {
+      animation-name: fade-in;
+      animation-duration: 1s;
+      animation-fill-mode: both;
+    }
+    
+    
+    .swiper-container .swiper-wrapper .swiper-slide-active .up:nth-child(2) {
+      animation-delay: 0.4s;
+    }
+    .swiper-container .swiper-wrapper .swiper-slide-active .up__link:nth-child(1) {
+      animation-delay: 0.2s;
+    }
+    
+    
+    @keyframes fade-in {
+      from {
+        opacity: 0;
+       /* transform: translateY(100px);*/
+      }
+      to {
+        opacity: 1;
+      /*  transform: translateY(0); */
+      }
+    }
   
 
 /*
