--- a/app.css
+++ b/app.css
@@ -301,6 +301,8 @@ SWIPER STUFF
      right: 0;
   }
 
+  
+
 
     
     .swiper-container .swiper-wrapper .swiper-slide-active .up {
@@ -336,6 +338,34 @@ SWIPER STUFF
   }
 
   
+
+  /*
+================================================================================
+SWIPER STUFF
+================================================================================
+*/
+
+.reference--logo--outline{
+  aspect-ratio: 1/1; 
+  width: 100%;
+   height: 100%;
+   overflow: hidden;
+ }
+ 
+   .ref-logo-container {
+     position: relative;
+     width: 100%;
+     padding-top: 100%; /* 1:1 Aspect Ratio */
+  }
+  .ref-logo-inner {
+     position: absolute;
+     top: 0;
+     left: 0;
+     bottom: 0;
+     right: 0;
+  }
+
+
   /*
 ================================================================================
 TXT SELECT
