--- a/app.css
+++ b/app.css
@@ -336,8 +336,18 @@ SWIPER STUFF
     .swiper-pagination {
       z-index: 1 !important;
   }
-
+  /*
+================================================================================
+OKOMITI TXT
+================================================================================
+*/
   
+  .okomito {
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    }
+
+
 
   /*
 ================================================================================
