--- a/app.css
+++ b/app.css
@@ -348,6 +348,21 @@ OKOMITI TXT
     }
 
 
+  /*
+================================================================================
+OUTLINE
+================================================================================
+*/
+
+    .outlajn {
+      color: #231F20; /* Fallback */
+      -webkit-text-fill-color: #231F20;
+      -webkit-text-stroke-width: 2px;
+      -webkit-text-stroke-color: #FFDC52;
+      letter-spacing: 3px;
+      text-stroke: 2px #FFDC52; /* Future-proofing */
+    }
+
 
   /*
 ================================================================================
