--- a/app.css
+++ b/app.css
@@ -504,3 +504,12 @@ CURSOR IMAGE OVER
   background-size: contain;
   z-index: 1;
 } 
+
+.project-overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
