--- a/app.css
+++ b/app.css
@@ -293,7 +293,7 @@ IMAGE OVERLAY CURSOR
 } 
 
 .project-overlay{
-  position: absolute;
+  /*position: absolute;*/
   top: 0;
   left: 0;
   width: 100%;
