--- a/app.css
+++ b/app.css
@@ -442,6 +442,13 @@ SWIPER STUFF
   }
 
 
+  /*  
+  SIMPLE FADE IN / FADE OUT / AUTOALPHA 023 simple fadein fadeout 
+  */
+.fadein-slide{
+  visibility:hidden;
+}
+
 
   /*
 ================================================================================
