--- a/app.css
+++ b/app.css
@@ -486,6 +486,15 @@ cursor: pointer;
 }
 
 
+  /*
+================================================================================
+LOCOMOTIVE FIX
+================================================================================
+*/
+.smooth-scroll {
+  overflow-y: hidden !important;
+}
+
 
 
   /*
