--- a/app.css
+++ b/app.css
@@ -287,6 +287,18 @@ DISABLE SELECTION
 }
 
 
+/*
+================================================================================
+COUNTER / BROJAČ O NAMA
+================================================================================
+*/
+.data, .counterx{
+  font-feature-settings: "tnum";
+  font-variant-numeric: tabular-nums;
+}
+
+
+
 
 /*
 ================================================================================
