--- a/app.css
+++ b/app.css
@@ -468,7 +468,7 @@ BUTTON HOVER LOCO
 */
 
 
-*, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+/* *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; } */
 /* body, html { font-size: 100%; padding: 0; margin: 0; height: 100%;} */
 
 .item a {
