--- a/app.css
+++ b/app.css
@@ -8,6 +8,7 @@ html {
 body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+  transition: 0.3s ease-out;
 }
 /*
 ================================================================================
