--- a/app.css
+++ b/app.css
@@ -35,7 +35,7 @@ body {
    overscroll-behavior: none;
 }
 
-section:not(.horizontal-scroll) {
+/* section:not(.horizontal-scroll) {
   min-height: 100vh;
   width: 100%;
   position: relative;
@@ -45,7 +45,7 @@ section:not(.horizontal-scroll) {
   padding: 50px 10vw;
   margin: auto;
 
-
+ */
 
 /*
 ================================================================================
