--- a/app.css
+++ b/app.css
@@ -22,19 +22,19 @@ DEFINE ROOT VARIABLES / definiraj svoje
   --loader-width: 50vw;
   --loader-height: 5em;
 
-  --text-color: #FFDC52;
+  /* --text-color: #FFDC52;
   --bg-color: #231F20;
-
+ */
 }
 
 
 
 
-
+/* 
 body {
    overscroll-behavior: none;
 }
-
+ */
 /* section:not(.horizontal-scroll) {
   min-height: 100vh;
   width: 100%;
