--- a/app.css
+++ b/app.css
@@ -453,6 +453,16 @@ OUTLINE
     }
 
 
+    .outlajn--black {
+      /* color: #231F20; /* Fallback */
+      /*-webkit-text-fill-color: #231F20; */
+      -webkit-text-stroke-width: 2px;
+      -webkit-text-stroke-color: #231F20;
+      letter-spacing: 3px;
+      text-stroke: 2px #231F20; /* Future-proofing */
+    }
+
+
   /*
 ================================================================================
 SWIPER STUFF
