--- a/app.css
+++ b/app.css
@@ -731,6 +731,64 @@ CURSOR IMAGE OVER
 
 */
 
+
+/*
+================================================================================
+ONAMA--KARTA--PULSING BUTTONS
+================================================================================
+*/
+
+
+.pulse-button {
+ 
+  box-shadow: 0 0 0 0 rgba(255, 189, 0, 0.5);
+  -webkit-animation: pulse 3.5s infinite;
+
+}
+
+.pulse-button:hover {
+  -webkit-animation: none;
+      -moz-transform: scale(2);
+    -ms-transform: scale(2);
+    -webkit-transform: scale(2);
+    transform: scale(2);
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -moz-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+  30% {
+    -moz-transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+    box-shadow: 0 0 0 20px rgba(255, 189, 0, 0);
+  }
+  50% {
+    -moz-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+    box-shadow: 0 0 0 0 rgba(255, 189, 0, 0);
+  }
+  100% {
+    -moz-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+    box-shadow: 0 0 0 0 rgba(255, 189, 0, 0);
+  }
+}
+
+
+
+
+
+
 /*
 ================================================================================
 WIZARDRY 1920
