--- a/app.css
+++ b/app.css
@@ -277,7 +277,7 @@ html.has-scroll-smooth {
     position: absolute;
     top: 0;
     right: 0;
-    background-color: black;
+    background-color: #231f20;
     opacity: 1;
     width: 8px;
     margin: 2px;
