--- a/app.css
+++ b/app.css
@@ -204,7 +204,7 @@ LOADER
 }
 
  /* VISIBILITY NONE */
- .hide, .fadein, .in1, .in2, .since, .t1, .c1, .imageloadicon {
+ .hide, .fadein, .in1, .in2, .since, .t1, .c1 {
     visibility: hidden;
 }
  
