--- a/app.css
+++ b/app.css
@@ -798,6 +798,12 @@ WIZARDRY 1920
 }
 
 
+@media only screen and (min-width: 992px) and (max-width: 1200px)  {
+     body {font-size: 16.8px;}
+}
+
+
+
 
 
 .mapboxgl-ctrl, .mapboxgl-ctrl-attrib-inner {
