--- a/app.css
+++ b/app.css
@@ -798,9 +798,9 @@ WIZARDRY 1920
 }
 
 
-@media only screen and (min-width: 992px) and (max-width: 1200px)  {
+/* @media only screen and (min-width: 992px) and (max-width: 1200px)  {
      body {font-size: 14px;}
-}
+} */
 
 
 
