--- a/app.css
+++ b/app.css
@@ -1085,19 +1085,19 @@ SORTING CSS
 @keyframes anim-1 {
   50% {
     opacity: 0;
-    bottom: 24px;
+    bottom: 1.25em;
     -webkit-transform: translate3d(5em, 0, 0);
     transform: translate3d(5em, 0, 0);
   }
   51% {
     opacity: 0;
-    bottom: 24px;
+    bottom: 1.25em;
     -webkit-transform: translate3d(-5em, -40%, 0);
     transform: translate3d(-5em, -40%, 0);
   }
   100% {
     opacity: 1;
-    bottom: 24px;
+    bottom: 1.25em;
     -webkit-transform: translate3d(0, -40%, 0);
     transform: translate3d(0, -40%, 0);
   }
