--- a/app.css
+++ b/app.css
@@ -998,7 +998,7 @@ SORTING CSS
   display: inline-block;
   bottom: 0;
   left: 0;
-  padding: 0 0.25em;
+  padding: 0;
   width: 100%;
   height: calc(100% - 1em);
   color: #231f20;
