--- a/app.css
+++ b/app.css
@@ -1045,8 +1045,8 @@ SORTING CSS
 .input_label-search:after {
   content: "X";
   position: absolute;
-  top: 0.36em;
-  right: 0.26em;
+/*   top: 0.36em;
+  right: 0.26em; */
 }
 
 .input_field:focus + .input_label::after,
