--- a/app.css
+++ b/app.css
@@ -1064,16 +1064,19 @@ SORTING CSS
 @-webkit-keyframes anim-1 {
   50% {
     opacity: 0;
+    bottom: 0em;
     -webkit-transform: translate3d(1em, 0, 0);
     transform: translate3d(1em, 0, 0);
   }
   51% {
     opacity: 0;
+    bottom: 0em;
     -webkit-transform: translate3d(-1em, -40%, 0);
     transform: translate3d(-1em, -40%, 0);
   }
   100% {
     opacity: 1;
+    bottom: 0em;
     -webkit-transform: translate3d(0, -40%, 0);
     transform: translate3d(0, -40%, 0);
   }
@@ -1081,19 +1084,19 @@ SORTING CSS
 @keyframes anim-1 {
   50% {
     opacity: 0;
-    /* bottom: 1.25em; */
+    bottom: 1.25em;
     -webkit-transform: translate3d(5em, 0, 0);
     transform: translate3d(5em, 0, 0);
   }
   51% {
     opacity: 0;
-    /* bottom: 1.25em; */
+    bottom: 1.25em;
     -webkit-transform: translate3d(-5em, -40%, 0);
     transform: translate3d(-5em, -40%, 0);
   }
   100% {
     opacity: 1;
-    /* bottom: 1.25em; */
+    bottom: 1.25em;
     -webkit-transform: translate3d(0, -40%, 0);
     transform: translate3d(0, -40%, 0);
   }
