--- a/app.css
+++ b/app.css
@@ -816,7 +816,7 @@ WIZARDRY 1920
 #map {
    width: 100%;
    height: 100%;
-
+}
 .mapboxgl-ctrl, .mapboxgl-ctrl-attrib-inner {
 
 display:none!important;
