--- a/app.css
+++ b/app.css
@@ -1114,3 +1114,6 @@ input::-webkit-search-cancel-button {
 }
 
 
+/* IMAGE CURSOR*/
+.demo-image {
+  cursor: url("http://tholman.com/intense-images/img/plus_cursor.png") 25 25, auto;
