--- a/app.css
+++ b/app.css
@@ -221,7 +221,7 @@ LOADER
 
 /*
 ================================================================================
-O NAMA HORIZONTAL SCROLL
+O NAMA HORIZONTAL SCROLL // sredi
 ================================================================================
 */
 
