--- a/app.css
+++ b/app.css
@@ -1142,3 +1142,4 @@ input::-webkit-search-cancel-button {
 /* IMAGE CURSOR*/
 .demo-image {
   cursor: url("http://tholman.com/intense-images/img/plus_cursor.png") 25 25, auto;
+}
