--- a/app.css
+++ b/app.css
@@ -869,6 +869,33 @@ SPLIDE CSS
 .splide *:focus { outline: none; }
 
 
+/*
+================================================================================
+CUSTOM CURSOR
+================================================================================
+*/
+
+body .cursory {
+  pointer-events: none;
+
+}
+body .cursor__circle {
+  /*position: fixed;
+  top: 0;
+  left: 0;*/
+  z-index: 10; 
+  mix-blend-mode: difference; 
+ 
+  transform: translateX(-50%) translateY(-50%);
+}
+body .cursor__circle--big {
+  stroke: #dedede;
+  fill: transparent;
+     mix-blend-mode: difference; 
+  transform: translateX(-50%) translateY(-50%);
+}
+
+
 
 
 /*
