--- a/app.css
+++ b/app.css
@@ -10,6 +10,15 @@ body {
 	-moz-osx-font-smoothing: grayscale;
   transition: 0.3s ease-out;
 }
+
+* {
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;          /* Likely future */      
+}
+
+
 /*
 ================================================================================
 DEFINE ROOT VARIABLES / definiraj svoje
