--- a/app.css
+++ b/app.css
@@ -11,7 +11,7 @@ body {
   transition: 0.3s ease-out;
 }
 
-* {
+.nosel {
   -webkit-user-select: none;  /* Chrome all / Safari all */
   -moz-user-select: none;     /* Firefox all */
   -ms-user-select: none;      /* IE 10+ */
