--- a/app.css
+++ b/app.css
@@ -901,6 +901,7 @@ SORTING CSS
   float: left;
   min-height: 1px;
   width: 33%;
+  margin-left: -1em;
   padding-left: 1em;
   padding-right: 1em;
   
