--- a/app.css
+++ b/app.css
@@ -1235,3 +1235,82 @@ input::-webkit-search-cancel-button {
 /*   .full-opacity {
     opacity: 1.0 !important;
   } */
+
+
+
+/*
+================================================================================
+CUSTOM SELECT BUTTON - LOKACIJE
+================================================================================
+*/
+  .main-select {
+    display: none;
+  }
+  
+  .select-dropdown {
+    position: relative;
+    width: 13.97em;
+    display: inline-block;
+    /*margin-bottom: 20px;*/
+    margin-right: 20px;
+    margin-left: -4px;
+  }
+  .select-dropdown:first-child {
+    margin-left: 0;
+  }
+  .select-dropdown:last-child {
+    margin-bottom: 0px;
+  }
+  
+  .select-head {
+    border: 2px solid #231f20;
+    padding: 1em 1em 1em 1em;
+    cursor: pointer;
+    background-color: #FFDC52;
+    font-size: 1.04em;
+    position: relative;
+  }
+  .select-head:after {
+    content: "";
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 6px 5.5px 0 5.5px;
+    border-color: #231f20 transparent transparent transparent;
+    position: absolute;
+    right: 1.04em;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    transition: transform 0.6s ease;
+  }
+  
+  .is-open .select-head:after {
+    transform: rotate(180deg);
+  }
+  
+  .select-options {
+    position: absolute;
+    top: calc(100% - 1px);
+    left: 0;
+    width: 100%;
+    color: #231f20;
+    background-color: #FFDC52;
+    display: none;
+    overflow-y: auto;
+    z-index: 1;
+    border: 1px solid #231f20;
+    border-top: none;
+  }
+  
+  .select-option-list {
+    padding: 1em 1em 1em 1em;
+    cursor: pointer;
+    font-size: 1.04em;
+    transition: background-color 0.3s ease;
+  }
+  .select-option-list:hover {
+    color: #FFDC52;
+    background-color: #231f20;
+  }
